# xrdofs-openverify

./: .gitignore  CMakeLists.txt  Containerfile  Containerfile.xrootd  LICENSE  README.md  build-rpm.sh  xrdofs-openverify.spec
docs/: prometheus.md
include/: OpenVerifyCache.hh  OpenVerifyCacheKey.hh  OpenVerifyHostReliability.hh  OpenVerifyMetrics.hh  OpenVerifySingleFlight.hh  XrdOfsOpenVerify.hh
src/: OpenVerifyCache.cpp  OpenVerifyHostReliability.cc  OpenVerifyMetrics.cc  OpenVerifySingleFlight.cc  XrdOfsOpenVerifyFile.cc  XrdOfsOpenVerifyFileSystem.cc  XrdOfsOpenVerifyImpl.cc
tests/: OpenVerifyCacheTests.cc  OpenVerifySingleFlightTests.cc
